Fix deprecation warnings
Scala fixes:
- Replace deprecated mutable Set -- and - operators with diff/toSet
- Replace deprecated Traversable with Iterable in type bounds
- Replace deprecated Either.left.get/right.get with .value
- Replace deprecated TraversableOnce with IterableOnce
- Replace deprecated JavaConverters with CollectionConverters where safe
- Fix auto-application deprecation by adding explicit ()

Java fixes:
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()

Note: Some deprecations (WrappedArray, Stream, JavaConverters in serializers)
are intentionally kept for backward compatibility with existing serialized data.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>